--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Chandra Jyoti School</title>
-</head>
-<body>
-    <h1>Welcome to Chandra Jyoti School!!!</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block body %}
+<div id="carouselExampleControls" class="carousel slide pointer-event" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item">
+        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
+      </div>
+      <div class="carousel-item">
+        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
+      </div>
+      <div class="carousel-item active">
+        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<div class="row card-business">
+  <div id="borderDemo2" class="col business">
+      <div class="business-title">
+          <h1>Chandra Jyoti School</h1>
+      </div>
+      <div class="business-content">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam doloremque est corrupti quis possimus? Magni rerum aspernatur officia quod eos debitis expedita, magnam, consequatur dicta obcaecati quisquam, accusamus commodi odit.</p>
+      </div>
+      <div class="btn-share">
+          <button class="btn btn-light">Share</button>
+      </div>
+  </div>
+  <div class="col business">
+      <div>
+          <img class="img-fluid rounded" src="/static/photo-1.jpg">
+      </div>
+  </div>
+</div><br>
+{% endblock %}
