Redefined pages and added contact page and few other

--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -5,15 +5,38 @@ About Us
 {% endblock %}
 
 {% block body %}
-<div class="about-container">
+<div class="about-container container">
     <div class="card mb-3">
-        <img class="bd-placeholder-img card-img-top" src="/static/background.jpg" width="100%" height="180"><rect width="100%" height="100%" fill="#868e96"></rect></svg>
+        <img class="bd-placeholder-img card-img-top" src="/static/background.jpg" width="auto" height="100%"><rect width="100%" height="100%" fill="#868e96"></rect></svg>
         <h1 style="text-align: center;">About Us</h1>
     
         <div class="card-body">
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id orci lorem. Phasellus nec augue sit amet enim accumsan imperdiet. Sed felis lorem, volutpat non vulputate at, fringilla ut nunc. Duis sit amet ipsum est. Morbi sed rhoncus leo. Nulla a metus ex. Nulla efficitur lorem in hendrerit fermentum. Donec auctor sem in leo dictum fermentum. Quisque luctus nibh at fermentum condimentum. Nunc maximus velit massa, a rhoncus nisl laoreet vitae. Cras convallis justo lacus, ut suscipit eros mattis eu.<br><br>
-
-            In justo lectus, luctus in congue a, semper nec felis. Curabitur id urna consectetur, euismod augue eu, consectetur neque. Nam sagittis ligula non ante laoreet, nec auctor massa dapibus. Vivamus nec nisl rutrum est tempor pretium suscipit vitae lacus. Sed rutrum ex nulla, quis efficitur purus maximus non. Vestibulum fringilla venenatis lectus, ac malesuada nunc semper in. Aliquam erat volutpat. Nam in justo vel dolor pretium semper eu et lacus. Etiam porttitor mi enim, quis cursus nibh rutrum sit amet. Donec finibus suscipit libero nec scelerisque. Ut fermentum felis sed dolor aliquet faucibus. Aenean mi felis, commodo id lacus in, malesuada lobortis mauris. Aliquam lacinia maximus facilisis.</p>
+            <main>
+<!-- History -->
+                <section class="history">
+                    <h2>Our History</h2>
+                    <p>Chandrajyoti English Boarding School Sindhuli was founded in 2072 BS by a group of educators who were passionate about providing high-quality education to students of all backgrounds. Our School has recently been improved, redesigned, reformed and restructured to provide better education to its students. With a committed administration and faculty, the school has been transformed into a state-of-the-art facility that offers a high-quality education to its students.</p>
+                    <p>The transformation of Chandrajyoti School is expected to be a testament to the power of committed leadership and dedicated faculty. By investing in the facilities, curriculum, and faculty, the school has created a learning environment that promotes academic achievement and student success</p>
+                </section>
+        
+                <!-- Mission -->
+                <section class="mission">
+                    <h2>Our Mission</h2>
+                    <p>The mission of Chandrajyoti School is to provide a challenging and engaging education that prepares students for success in a rapidly changing world. The school is dedicated to creating a supportive and inclusive community that values diversity, equity, and inclusion. The school aims to empower students to become confident, creative, and critical thinkers who are prepared to navigate complex global issues and contribute to a better future for all.</p>
+                </section>
+        
+                <!-- Values -->
+                <section class="values">
+                    <h2>Our Values</h2>
+                    <ul>
+                        <li><strong>Excellence:</strong> We strive for excellence in all aspects of our academic program and our community.</li>
+                        <li><strong>Innovation:</strong> We embrace innovation and creativity in our approach to teaching and learning.</li>
+                        <li><strong>Inclusivity:</strong> We celebrate diversity and foster a culture of inclusivity and respect.</li>
+                        <li><strong>Integrity:</strong> We uphold the highest standards of integrity and ethical conduct.</li>
+                    </ul>
+                </section>
+        
+            </main>
         </div>
     </div>
 </div>
