--- a/templates/careers.html
+++ b/templates/careers.html
@@ -6,7 +6,7 @@ Careers
 
 {% block body %}
 <div class="container-md career-container">
-    <img id="career-banner" class="img-fluid" src="static/WeAreHiring.jpg" height="320" width="100%">
+    <img class="img-fluid" src="static/WeAreHiring.jpg" width="100%">
     <h1 class="text-center mt-2 mb-4">Find the right fit</h1>
     <p class="lead">
         Welcome to our job finding site, where job seekers and employers come together to find their perfect match. Our platform offers a user-friendly experience that allows job seekers to easily search and apply for job listings. View our open jobs today to find your next opportunity.
