--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,10 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
       </div>
       <div class="carousel-item">
-        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
+        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover1.jpg" width="800px" height="400px">
       </div>
       <div class="carousel-item active">
-        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover.jpg" width="800px" height="400px">
+        <img class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" src="/static/cover1.jpg" width="800px" height="400px">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -26,14 +26,11 @@
   </div>
 <div class="row card-business">
   <div id="borderDemo2" class="col business">
-      <div class="business-title">
-          <h1>Chandra Jyoti School</h1>
+      <div class="business-title brand-color">
+          <h1>Chandrajyoti English Boarding School Sindhuli</h1>
       </div>
-      <div class="business-content">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam doloremque est corrupti quis possimus? Magni rerum aspernatur officia quod eos debitis expedita, magnam, consequatur dicta obcaecati quisquam, accusamus commodi odit.</p>
-      </div>
-      <div class="btn-share">
-          <button class="btn btn-light">Share</button>
+      <div class="business-content brand-color">
+          <p>Located in the heart of Tinpatan, our school delivers the best of School education, following the curriculum from Curriculum Development Center (CDC), adapted to meet the needs of our students aged 4 and above. Students come to Chandrajyoti for our strong roots and truly personalised approach to learning, which enable your child to achieve the very best that they are capable of at pre-school and school level. Our commitment to maintaining a low teacher to student ratio, with small class sizes, means we have the time to identify, celebrate and develop excellence in every child.</p>
       </div>
   </div>
   <div class="col business">
