--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -47,16 +47,6 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
             </ul>
-            <div class="dropdown dropdown-center">
-                <button class="btn dropbtn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Sign in
-                </button>
-                <ul class="dropdown-menu" style="">
-                  <li><a class="dropdown-item" href="/login">Sign in</a></li>
-                  <li><a class="dropdown-item" href="#">Register</a></li>
-                  <li><a class="dropdown-item" href="#">Help</a></li>
-                </ul>
-            </div>
           </div>
         </div>
       </nav>
@@ -66,7 +56,7 @@
       <div class="footer"><br>
         <div class="row">
           <!--Column First-->
-          <div class="col-sm-4 mb-3 mb-sm-0" style="text-align: center; padding-inline: 20px;">
+          <div class="col-sm-3 mb-3 mb-sm-0" style="text-align: center; padding-inline: 20px;">
             <h5>Reach Us</h5>
             <div class="mb-2">
               <img src="/static/email.png" alt="" height="25px"> <a href="mailto:chandrajyotiebs@gmail.com" style="text-decoration: none; color: white;">chandrajyotiebs@gmail.com</a> <br>
@@ -78,8 +68,14 @@
               <img src="/static/location.png" alt="" height="25px"> Tinpatan 4, Sindhuli, Nepal
             </div>
           </div>
+          <!--Column Second-->
+          <div class="col-sm-3 mb-3 mb-sm-0" style="text-align: center; padding-inline: 20px;">
+            <h5>School Office Hours</h5>
+            <div class="mb-2">Sunday to Friday<br>10:00 am - 4:00 pm<br></div>
+            <div class="mb-2">Admissions Phone number<br>9869557578 | 9823442021</div>
+          </div>
           <!--Column Third-->
-          <div class="col-sm-4 mb-3 mb-sm-0" style="text-align: center; padding-inline: 20px;">
+          <div class="col-sm-3 mb-3 mb-sm-0" style="text-align: center; padding-inline: 20px;">
             <h5>Support</h5>
             <div class="mb-2">
               <a href="/terms-and-conditions" style="text-decoration: none; color: white;">Terms and Conditions</a><br>
@@ -91,11 +87,11 @@
               <a href="/about-us" style="text-decoration: none; color: white;">About Us</a>
             </div>
             <div class="mb-2">
-              <a href="/contact-us" style="text-decoration: none; color: white;">Contact Us</a>
+              <a href="#" style="text-decoration: none; color: white;">Contact Us</a>
             </div>
           </div>
           <!--Column Fourth-->
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="social">
               <label><h5>Connect With Us</h5></label>
                 <!--Social media icon inline flex-->
