--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,13 @@
 body {
     font-family: sans-serif;
 }
+
 .hidden {
     display: none;
+}
+
+.brand-color {
+    color: #a50c30;
 }
 
 #career-banner {
@@ -49,7 +54,7 @@ body
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #0ab6ff;
+    background-color: rgb(240, 240, 240);
     opacity: 0.9;
 }
 
@@ -94,7 +99,7 @@ body
 
 .card-group
 {
-    background-color: #0ab6ff;
+    background-color: #071014;
     padding: 5px;
 }
 
@@ -192,3 +197,51 @@ body
   .designation {
     text-align: right;
   }
+  
+  .login-form {
+    margin-top: 50px;
+    max-width: 350px;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+}
+.login-form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.login-form input[type="text"],
+.login-form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.1);
+}
+.login-form input[type="submit"] {
+    background-color: #d23228;
+    color: #fff;
+    padding: 8px 25px;
+    border: 1px black;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 2px rgba(0,0,0,0.1);
+}
+.login-form input[type="submit"]:hover {
+    background-color: #af180d;
+}
+
+.btn-back {
+    background-color: #ffffff;
+    color: #000000;
+    padding: 8px 25px;
+    border: 1px black;
+    border-radius: 3px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 2px rgba(0,0,0,0.1);
+}
+.btn-back:hover {
+    background-color: #d23228;
+    color: #ffffff;
+}
