--- a/templates/career-detail.html
+++ b/templates/career-detail.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="card text-center" style="margin-bottom: 20px;">
             <div class="card-body">
-                <img src="/static/chandrajyoti.png" height="100px">
+                <img src="/static/chandrajyoti.png" class="img-fluid" alt="Responsive image">
                 <div>
                     <h4>{{job.title}}</h4>
                 </div>
