Button UI changed and some layouts

--- a/templates/career-detail.html
+++ b/templates/career-detail.html
@@ -62,7 +62,7 @@
                             <li class="list-group-item"><b>Apply Before:</b> <br>{{job.deadline}}</li>
                         </ul>
                         <div class="d-grid" style="padding-top: 12px;">
-                            <button class="btn btn-primary" type="button">Apply Now</button>
+                            <button type="button" class="btn btn-back" type="button">Apply Now</button>
                           </div>
                     </div>
                 </div>
