--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,7 @@
                 <span><b>Offered Salary:</b> {{ job['salary'] }}</span><br>
                 <span><b>Deadline:</b> {{ job['deadline'] }}</span><br>
             </div>
-            <a href="/careers/{{job['id']}}" class="btn btn-primary">View Job Details</a>
+            <a href="/careers/{{job['id']}}" type="button" class="btn btn-back">View Job Details</a>
         </div>
     </div>
   </div>
