--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,14 +24,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
               </li>
-              <li class="nav-item">
-              <a class="nav-link" href="/about-us">About Us</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/careers">Careers</a>
+              <a class="nav-link" href="#">Gallery</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,18 +37,20 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">News & Stories</a></li>
                 <li><a class="dropdown-item" href="#">Our Teams</a></li>
-                <li><a class="dropdown-item" href="#">Gallery</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="/careers">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about-us">About Us</a>
             </li>
             </ul>
             <div class="dropdown dropdown-center">
                 <button class="btn dropbtn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Sign in
                 </button>
-                <ul class="dropdown-menu" style="">
+                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/login">Sign in</a></li>
                   <li><a class="dropdown-item" href="#">Register</a></li>
                   <li><a class="dropdown-item" href="#">Help</a></li>
@@ -86,9 +85,6 @@
             </div>
             <div class="mb-2">
               <a href="/privacy-policy"  style="text-decoration: none; color: white;">Privacy Policy</a>
-            </div>
-            <div class="mb-2">
-              <a href="/about-us" style="text-decoration: none; color: white;">About Us</a>
             </div>
             <div class="mb-2">
               <a href="/contact-us" style="text-decoration: none; color: white;">Contact Us</a>
