--- a/templates/careers.html
+++ b/templates/careers.html
@@ -7,12 +7,15 @@ Careers
 {% block body %}
 <div class="container-md career-container">
     <img class="img-fluid" src="static/WeAreHiring.jpg" width="100%">
-    <h1 class="text-center mt-2 mb-4">Find the right fit</h1>
-    <p class="lead">
-        Welcome to our job finding site, where job seekers and employers come together to find their perfect match. Our platform offers a user-friendly experience that allows job seekers to easily search and apply for job listings. View our open jobs today to find your next opportunity.
-        <br>At our job finding site, we are committed to helping job seekers and employers find their perfect match. Join our community today and take the next step in your career journey.
-    </p>
-    <h2 class="text-center mt-2 mb-4">Job Openings</h2>
+    <h3 class="text-center mt-2 mb-4">Find the right fit</h3>
+    <p>You will be joining a strong, experienced, and highly motivated team, with specialist expertise across key areas of school management and business support. Working closely with your colleagues and the Board of Directors you will be provided with significant opportunity to share and develop your expertise.</p>
+    <h5>How to apply</h5>
+    <p>Interested candidates should read the role profile and job specification.</p>
+    <p>Applications should include your up-to-date CV, a recent head and shoulders colour photograph</p>
+    <p>In a covering letter, applicants should highlight how their experience, knowledge, and skills match those of the ideal candidate as set out above and within the role profile. In your application please also detail your availability, and when you would be available to start.</p>        
+    <p>Applications should be submitted to: chandrajyotiebs@gmail.com</p>
+    <p>We encourage early applications to avoid disappointment, as interviews will take place on a rolling basis and the application process may close once the right candidate is found.</p>
+    <h4 class="text-center mt-2 mb-4">Job Openings</h4>
     {% for job in jobs %}
         {% include 'jobitem.html' %}
     {% endfor %}
