First phase of project with admin account and investor account is ready with some UI improvement

--- a/templates/careers.html
+++ b/templates/careers.html
@@ -6,7 +6,7 @@ Careers
 
 {% block body %}
 <div class="container-md career-container">
-    <img class="img-fluid" src="static/WeAreHiring.jpg" width="100%">
+    <img class="img-fluid" src="static/images/WeAreHiring.jpg" width="100%">
     <h3 class="text-center mt-2 mb-4">Find the right fit</h3>
     <p>You will be joining a strong, experienced, and highly motivated team, with specialist expertise across key areas of school management and business support. Working closely with your colleagues and the Board of Directors you will be provided with significant opportunity to share and develop your expertise.</p>
     <h5>How to apply</h5>
