--- a/templates/success.html
+++ b/templates/success.html
@@ -7,12 +7,9 @@ Success!
 {% block body %}
 <div class="card text-center">
     <div class="card-body" style="margin-top: 50px;">
-        <img src="/static/checked.png" height="100px">
-        <div>
-            <h4 class="alert-heading">Congratulations!</h4>
-        </div>
+        <img src="/static/images/checked.png" height="100px">
         <div class="alert alert-success">
-            <p>{{ output }}</p>
+            <p>{{ message }}</p>
           </div>
     </div>
 </div>
