--- a/static/style.css
+++ b/static/style.css
@@ -6,8 +6,16 @@ body {
     display: none;
 }
 
+.required-field {
+    color: #a50c30;
+}
+
 .brand-color {
     color: #a50c30;
+}
+
+.brand-background {
+    background-color: #a50c30;
 }
 
 #career-banner {
@@ -132,12 +140,12 @@ body
 
   .profile-dropdown
   {
-    padding-right: 10px;
+    padding-right: 20px;
   }
 
   .dropbtn
   {
-      margin-left: 10px;
+      margin-left: 25px;
       margin-right: 10px;
       color: white;
       background-color: #d23228;
@@ -161,7 +169,7 @@ body
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 150px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -169,10 +177,19 @@ body
   
   .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 8px 12px 8px 12px;
     text-decoration: none;
     display: block;
   }
+
+  .dropdown-content a:hover {
+    color: #a50c30;
+    padding: 8px 12px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .show {display: block;}
 
   .nav-item a:hover {
     color: #a50c30;
@@ -211,6 +228,7 @@ body
     margin-bottom: 5px;
 }
 .login-form input[type="text"],
+.login-form input[type="email"],
 .login-form input[type="password"] {
     width: 100%;
     padding: 10px;
@@ -245,3 +263,20 @@ body
     background-color: #a50c30;
     color: #ffffff;
 }
+
+.second-header {
+    padding: 8px;
+}
+
+.profile-card {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #f8f9fa;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .card-hover:hover {
+    background-color: #f1f1f1;
+  }
