--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -7,7 +7,7 @@ About Us
 {% block body %}
 <div class="about-container container">
     <div class="card mb-3">
-        <img class="bd-placeholder-img card-img-top" src="/static/background.jpg" width="auto" height="100%"><rect width="100%" height="100%" fill="#868e96"></rect></svg>
+        <img class="bd-placeholder-img card-img-top" src="/static/images/background.jpg" width="auto" height="100%"><rect width="100%" height="100%" fill="#868e96"></rect></svg>
         <h1 style="text-align: center;">About Us</h1>
     
         <div class="card-body">
