--- a/templates/career-detail.html
+++ b/templates/career-detail.html
@@ -9,7 +9,6 @@
     <div class="row">
         <div class="card text-center" style="margin-bottom: 20px;">
             <div class="card-body">
-                <img src="/static/chandrajyoti.png" class="img-fluid" alt="Responsive image">
                 <div>
                     <h4>{{job.title}}</h4>
                 </div>
@@ -62,7 +61,11 @@
                             <li class="list-group-item"><b>Apply Before:</b> <br>{{job.deadline}}</li>
                         </ul>
                         <div class="d-grid" style="padding-top: 12px;">
+                            {% if is_expired %}
+                            <button type="button" class="btn btn-dark" type="button">This job has expired</button>
+                            {% else %}
                             <button type="button" class="btn btn-back" type="button">Apply Now</button>
+                            {% endif %}
                           </div>
                     </div>
                 </div>
