--- a/templates/forgot-username.html
+++ b/templates/forgot-username.html
@@ -10,11 +10,11 @@ Login
         <div class="row g-0">
           <div class="col-md-7">
             <div class="card-body">
-                <form class="login-form" action="" method="post">
-                    <h3>Forgot Username</h3>
+                <form class="login-form" action="/forgot-username" method="post">
+                    <h3>Forgot Email?</h3>
                     <label style="font-size: 12px; color: rgb(150, 150, 150);">Enter your mobile number.</label><br><br>
-                    <label for="username">Mobile Number</label>
-                    <input type="text" name="username" id="username" placeholder="Valid 10 digit mobile number." required>
+                    <label for="email">Mobile Number</label>
+                    <input type="text" name="email" id="email" placeholder="Valid 10 digit mobile number." required>
     
                     <div class="row justify-content-center">
                         <div class="col-4">
@@ -28,7 +28,7 @@ Login
             </div>
           </div>
           <div class="col-md-5">
-            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/login-banner.jpg">
+            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/images/login-banner.jpg">
           </div>
         </div>
     </div>
