--- a/templates/login-continue.html
+++ b/templates/login-continue.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Login
+Continue login
 {% endblock %}
 
 {% block body %}
@@ -10,19 +10,23 @@ Login
         <div class="row g-0">
           <div class="col-md-7">
             <div class="card-body">
-                <form class="login-form" action="" method="post">
+                <form class="login-form" action="/login-continue" method="post">
                     <h3>Login</h3>
-                    <label style="font-size: 12px; color: rgb(150, 150, 150);">Enter your username to login</label><br><br>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" id="username" required>
-                    <a href="/forgot-username"><p style="text-align: right;">Forgot Username?</p></a>
+                    <label style="font-size: 12px; color: rgb(150, 150, 150);">Enter your password to login</label><br><br>
+                    <input style="display: none;" type="text" name="account_type" id="account_type" value="{{ data[1] }}">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" value="{{ data[0] }}" required>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" required>
+                    <input type="checkbox" onclick="showPw()"> Show Password
+                    <a href="/forgot-username"><p style="text-align: right;">Forgot email?</p></a>
                     <input type="submit" value="Continue"><br><br>
-                    <label style="font-size: 13px; color: rgb(150, 150, 150);">Don’t have an account yet? <a href="#">Create one.</a></label>
+                    <label style="font-size: 13px; color: rgb(150, 150, 150);">Don’t have an account yet? <a href="/register">Create one.</a></label>
                 </form>
             </div>
           </div>
           <div class="col-md-5">
-            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/login-banner.jpg">
+            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/images/login-banner.jpg">
           </div>
         </div>
     </div>
