--- a/templates/login.html
+++ b/templates/login.html
@@ -10,19 +10,24 @@ Login
         <div class="row g-0">
           <div class="col-md-7">
             <div class="card-body">
-                <form class="login-form" action="" method="post">
-                    <h3>Login</h3>
-                    <label style="font-size: 12px; color: rgb(150, 150, 150);">Enter your username to login</label><br><br>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" id="username" required>
-                    <a href="/forgot-username"><p style="text-align: right;">Forgot Username?</p></a>
+                <form class="login-form" action="/login" method="post">
+                    <h3>Login</h3><br>
+                    <select class="form-select" name="account_type">
+                      <option selected value="student">Student</option>
+                      <option value="staff">Staff</option>
+                      <option value="investor">Member</option>
+                      <option value="admin">Admin</option>
+                  </select><br>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" required>
+                    <a href="/forgot-username"><p style="text-align: right;">Forgot email?</p></a>
                     <input type="submit" value="Continue"><br><br>
-                    <label style="font-size: 13px; color: rgb(150, 150, 150);">Don’t have an account yet? <a href="#">Create one.</a></label>
+                    <label style="font-size: 13px; color: rgb(150, 150, 150);">Don’t have an account yet? <a href="/register">Create one.</a></label>
                 </form>
             </div>
           </div>
           <div class="col-md-5">
-            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/login-banner.jpg">
+            <img class="bd-placeholder-img img-fluid rounded-start" width="100%" height="250" src="/static/images/login-banner.jpg">
           </div>
         </div>
     </div>
