--- a/templates/error.html
+++ b/templates/error.html
@@ -9,9 +9,9 @@ Error!
     <div class="card-body" style="margin-top: 50px;">
         <img src="/static/images/close.png" height="100px">
         <div>
-            <h4 class="alert">Error {{ code }}!</h4>
+            <h4 class="alert brand-color">Error {{ code }}!</h4>
         </div>
-        <div class="alert lead">
+        <div class="brand-color lead">
             <p>{{ message }}</p>
           </div>
     </div>
