--- a/templates/success.html
+++ b/templates/success.html
@@ -5,10 +5,10 @@ Success!
 {% endblock %}
 
 {% block body %}
-<div class="card text-center">
+<div class="text-center">
     <div class="card-body" style="margin-top: 50px;">
         <img src="/static/images/checked.png" height="100px">
-        <div class="alert alert-success">
+        <div class="alert" style="color: green;">
             <p>{{ message }}</p>
           </div>
     </div>
