--- a/templates/team-chandrajyoti.html
+++ b/templates/team-chandrajyoti.html
@@ -56,34 +56,34 @@ About Us
     <p></p>
     <div class="team-container">
       <div class="team-member">
-        <img src="/static/image_profile/img6.jpg" alt="Team Member 1">
+        <img src="/static/images/person-circle.svg" alt="Team Member 1">
         <h3>Mahesh Raj Pokharel</h3>
-        <p>Director</p>
+        <p>Founder</p>
       </div>
       <div class="team-member">
-        <img src="/static/image_profile/img5.jpg" alt="Team Member 2">
+        <img src="/static/images/person-circle.svg" alt="Team Member 2">
         <h3>Bishnu Prasad Kafle</h3>
-        <p>Director</p>
+        <p>Founder/Principal</p>
       </div>
       <div class="team-member">
-        <img src="/static/image_profile/img1.jpg" alt="Team Member 3">
+        <img src="/static/images/person-circle.svg" alt="Team Member 3">
         <h3>Natabar Khatri</h3>
-        <p>Director</p>
+        <p>Founder</p>
       </div>
       <div class="team-member">
-        <img src="/static/image_profile/img3.jpg" alt="Team Member 4">
+        <img src="/static/images/person-circle.svg" alt="Team Member 4">
         <h3>Balkrishna Pokhrel</h3>
-        <p>Director</p>
+        <p>Founder</p>
       </div>
       <div class="team-member">
-        <img src="/static/image_profile/img4.jpg" alt="Team Member 5">
+        <img src="/static/images/person-circle.svg" alt="Team Member 5">
         <h3>Tirtharaj Ghimire</h3>
-        <p>Director</p>
+        <p>Founder</p>
       </div>
       <div class="team-member">
-        <img src="/static/image_profile/img2.jpg" alt="Team Member 6">
+        <img src="/static/images/person-circle.svg" alt="Team Member 6">
         <h3>Laxman Pokhrel</h3>
-        <p>Director</p>
+        <p>Founder</p>
       </div>
     </div>
   </section>  
