--- a/templates/admin.html
+++ b/templates/admin.html
@@ -40,6 +40,18 @@ Admin Dashboard
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card card-hover">
+            <div class="card-body card-box">
+              <h6><img src="/static/images/sms-system-icon.svg" height="30px" width="30px"> SMS System Balance</h6>
+              <div class="mb-0">
+                <h6>Rs. {{ sms_system_bal }}</h6>
+              </div>
+            </div>
+          </div>
+        </div>
       </div><br>
 </div>
+
+
 {% endblock %}
