--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@ Login
         <div class="row g-0">
           <div class="col-md-7">
             <div class="card-body">
-                <form class="login-form" action="/login" method="post">
+                <form class="login-form" action="/login" method="post" style="background-color: #fef6f8;">
                     <h3>Login</h3><br>
                     <select class="form-select" name="account_type">
                       <option selected value="student">Student</option>
@@ -33,3 +33,6 @@ Login
     </div>
 </div>
 {% endblock %}
+
+
+source /home/chakmake/virtualenv/chandrajyotiebs/3.9/bin/activate && cd /home/chakmake/chandrajyotiebs
