--- a/templates/admit-student.html
+++ b/templates/admit-student.html
@@ -1,17 +1,12 @@
-{% extends "layout.html" %}
+{% extends "admin-layout.html" %}
 
 {% block title %}
-Register
+Student Admission
 {% endblock %}
 
 {% block body %}
 <div class="container-sm">
-    <h1>Pre-registration Form</h1>
-    <p>Chandrajyoti English Boarding School Sindhuli offers the best of both academics and extra carricular activities in a peaceful and harmonious learning environment for our students.</p>
-    Admissions is open for session 2080 BS and is
- FREE for Limited time period! <br>
-You can visit us Sunday to Friday (10:00 am to 4:00 pm) for admissions.
-You can also inbox us for queries!
+    <h3 class="text-center">New Admission</h3>
 
     <hr class="border border-danger border-1 opacity-50">
 
@@ -33,14 +28,14 @@ You can also inbox us for queries!
             <label class="form-label">Intended admission class:&nbsp;</label>
             <select class="form-select" name="grade">
                 <option selected>Select</option>
-                <option value="Nursery">Nursery</option>
-                <option value="L.K.G">L.K.G</option>
-                <option value="U.K.G">U.K.G</option>
-                <option value="Grade 1">Grade 1</option>
-                <option value="Grade 2">Grade 2</option>
-                <option value="Grade 3">Grade 3</option>
-                <option value="Grade 4">Grade 4</option>
-                <option value="Grade 5">Grade 5</option>
+                <option value="grade_nursery">Nursery</option>
+                <option value="grade_LKG">L.K.G</option>
+                <option value="grade_UKG">U.K.G</option>
+                <option value="grade_1">Grade 1</option>
+                <option value="grade_2">Grade 2</option>
+                <option value="grade_3">Grade 3</option>
+                <option value="grade_4">Grade 4</option>
+                <option value="grade_5">Grade 5</option>
             </select>
         </div>
         <div class="col-md-4" style="padding-left: 1%;">
@@ -89,24 +84,10 @@ You can also inbox us for queries!
             <input name="guardian_relation" type="text" class="form-control" required>
         </div>
           <!------------------>
-
-          <div class="col-md-11">
-            <div class="form-check">
-              <input class="form-check-input is-invalid" type="checkbox" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
-              <label class="form-check-label" for="invalidCheck3">
-                I Agree the <a href="/terms-and-conditions" style="color: brown;">terms and conditions</a>
-              </label>
-              <div id="invalidCheck3Feedback" class="invalid-feedback">
-                You must agree before submitting.
-              </div>
-            </div>
-          </div>
-          <div class="mb-3">
           <div class="col-12">
-            <button formaction="/admission-form" class="btn btn-danger" type="submit" onclick="return confirm('Are you sure?');">Submit form</button>
-          </div>
+            <button formaction="/admit_student" class="btn btn-danger" type="submit" onclick="return confirm('Are you sure?');">Submit form</button>
           </div>
 
-      </form>
+      </form><br>
 </div>
 {% endblock %}
