--- a/templates/login-continue.html
+++ b/templates/login-continue.html
@@ -19,7 +19,7 @@ Continue login
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" required>
                     <input type="checkbox" onclick="showPw()"> Show Password
-                    <a href="/forgot-username"><p style="text-align: right;">Forgot email?</p></a>
+                    <a href="/forgot-password"><p style="text-align: right;">Forgot password?</p></a>
                     <input type="submit" value="Continue"><br><br>
                     <label style="font-size: 13px; color: rgb(150, 150, 150);">Don’t have an account yet? <a href="/register">Create one.</a></label>
                 </form>
