--- a/templates/notice-details.html
+++ b/templates/notice-details.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 
 {% block title %}
-{{ notice.title }}
+Notice
 {% endblock %}
 
 {% block body %}
+
 <div style="background-color: white; margin-inline: 3%;">
     <div class="card mb-3">
         {% if notice.filepath %}
@@ -13,10 +14,13 @@
         <img src="/static/images/news-update.jpg">
         {% endif %}
         <div class="card-body">
-          <h4 class="card-title">{{notice.title}}</h4>
-          <p class="card-text">{{notice.content}}</p>
-          <p class="card-text"><small class="text-body-secondary">published on {{notice.date_published}}</small></p>
+          <h4 class="card-title">{{ notice.title }}</h4>
+          {% for line in notice.content.split("\n") %}
+          <p class="card-text">{{ line }}</p>
+          {% endfor %}
+          <p class="card-text"><small class="text-body-secondary">published on {{ notice.date_published }}</small></p>
         </div>
       </div>
 </div>
+
 {% endblock %}
