--- a/templates/register.html
+++ b/templates/register.html
@@ -6,11 +6,25 @@ Register
 
 {% block body %}
 <div class="container-sm">
+  
     <h1 style="text-align: center;">Create an account</h1>
 
-    <hr class="border border-danger border-1 opacity-50">
 
-    <form class="row g-3" action="/register" method="post">
+    <ul class="nav nav-tabs mb-3 justify-content-center" id="nav-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link link-danger active" id="nav-home-tab" data-bs-toggle="pill" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Member</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link link-danger" id="nav-profile-tab" data-bs-toggle="pill" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Staff</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link link-danger" id="nav-contact-tab" data-bs-toggle="pill" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Student</button>
+      </li>
+    </ul>
+    <div class="tab-content" id="nav-tabContent">
+      <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+
+    <form class="row g-3" method="post">
         <div class="col-md-6">
             <label class="form-label">Full Name<r class="required-field"> *</r></label>
             <input name="full_name" type="text" class="form-control" required>
@@ -53,9 +67,75 @@ Register
           </div>
         </div>
         <div class="mb-3">
-            <button class="btn btn-danger" type="submit">Submit</button>
+          <button formaction="/register-member" class="btn btn-danger" type="submit" value="submit" onclick="return confirm('Are you sure?');">Submit</button>
         </div>
 
       </form>
+      </div>
+      <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+
+    <form class="row g-3" method="post">
+        <div class="col-md-6">
+            <label class="form-label">Full Name<r class="required-field"> *</r></label>
+            <input name="full_name" type="text" class="form-control" required>
+        </div>
+        <div class="col-md-5">
+            <label class="form-label">Email<r class="required-field"> *</r></label>
+            <input name="email" type="email" class="form-control" required>
+        </div>
+
+        <div class="col-md-6">
+          <label class="form-label">mobile<r class="required-field"> *</r></label>
+          <input name = "mobile" type="text" class="form-control" required>
+        </div>
+
+        <div class="col-md-5">
+            <label class="form-label">Access Key<r class="required-field"> *</r></label>
+            <input name = "access_key" type="text" class="form-control" required>
+          </div>
+
+        <!--Pw-->
+        <div class="col-md-6">
+            <label class="form-label">Password<r class="required-field"> *</r></label>
+            <input name="password" type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+        </div>
+        <div class="col-md-5">
+            <label class="form-label">Confirm Password<r class="required-field"> *</r></label>
+            <input name="confirm_pwd" type="password" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+        </div>
+        <!---->
+
+        <div class="col-md-11">
+          <div class="form-check">
+            <input class="form-check-input is-invalid" type="checkbox" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+            <label class="form-check-label" for="invalidCheck3">
+              I Agree the <a href="/terms-and-conditions" style="color: brown;">terms and conditions</a>
+            </label>
+            <div id="invalidCheck3Feedback" class="invalid-feedback">
+              You must agree before submitting.
+            </div>
+          </div>
+        </div>
+        <div class="mb-3">
+          <button formaction="/register-staff" class="btn btn-danger" type="submit" value="submit" onclick="return confirm('Are you sure?');">Submit</button>
+        </div>
+
+      </form>
+      </div>
+      <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+        <form class="row g-3" action="/register_staff" method="post">
+          <div class="row text-center" style="padding: 15%;">
+            <h5 class="brand-color" style="font-weight: bold;">THIS FEATURE IS COMING SOON!</h5><br>
+            <h6 class="brand-color" style="font-weight: bold;">STAY TUNED.</h6>
+          </div>
+  
+        </form>
+
+
+        </div>
+
+      </div>
+    </div>
+
 </div>
 {% endblock %}
