--- a/templates/staff-layout.html
+++ b/templates/staff-layout.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="/static/style.css">
         <script type="text/javascript" src="static/jscripts.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <title>{% block title %}{% endblock %}| Chandra Jyoti School</title>
+        <title>{% block title %}{% endblock %}| Staff | Chandra Jyoti School</title>
         <link rel="icon" type="image/x-icon" href="/static/images/cj-school-icon.png">
         <meta name="description" content="Welcome to Chandrajyoti English Boarding School Sindhuli, a leading educational institution in Nepal. We are committed to providing quality education that fosters academic excellence, character development, and lifelong learning.">
         <meta name="keywords" content="School, Chandrajyoti English Boarding School Sindhuli, Education in Nepal, Best school in Sindhuli, Academic excellence, Character development, Lifelong learning, Comprehensive curriculum, Experienced faculty, State-of-the-art facilities, Leading educational institution">
@@ -19,39 +19,33 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/admin"><img src="/static/images/cjs-logo.png" alt="" width="100" height="auto" class="d-inline-block align-text-top"></a>
+          <a class="navbar-brand" href="/staff"><img src="/static/images/cjs-logo.png" alt="" width="100" height="auto" class="d-inline-block align-text-top"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/admin">Dashboard</a>
+                <a class="nav-link" href="/staff">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/student-info">Student</a>
+                <a class="nav-link" href="#">Class</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/staff-info">Staff</a>
+                <a class="nav-link" href="/attendance">Attendance</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admit_student">Admission</a>
+                <a class="nav-link" href="#">SMS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin-sms">SMS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Library</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/settings">Settings</a>
+                <a class="nav-link" href="#">Reports</a>
               </li>
             </ul>
                 <div class="dropdown profile-dropdown">
                   <button onclick="myFunction()" class="dropbtn"><img src="/static/images/person-circle-white.svg" height="30px">&nbsp;&nbsp;Profile</button>
                   <div id="myDropdown" class="dropdown-content">
                     <a class="border-bottom" href="#">{{ username }}</a>
-                    <a class="border-bottom" href="/admin">Dashboard</a>
+                    <a class="border-bottom" href="/staff">Dashboard</a>
                     <a class="border-bottom" href="#" data-bs-toggle="modal" data-bs-target="#passwordModal" data-bs-whatever="@getbootstrap">Change Password</a>
                     <a class="border-bottom" href="/logout">Log Out</a>
                   </div>
@@ -85,7 +79,7 @@
             <div class="mx-auto p-2">
               <label class="form-label">Confirm New Password<r class="required-field"> *</r></label>
               <input name="confirm_pwd" type="text" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-              <input style="display: none;" type="text" name="account_type" id="account_type" value="admin">
+              <input style="display: none;" type="text" name="account_type" id="account_type" value="staff">
             </div>
     
             <div class="mx-auto p-2">
