bulk sms to guardian mobile added

--- a/templates/sms.html
+++ b/templates/sms.html
@@ -218,6 +218,7 @@ Admin SMS
             <label for="audience_type">Select Recipients</label>
             <select class="form-select" name="audience_type" id="audience_type">
                 <option selected>Select</option>
+                <option value="student">Student</option>
                 <option value="staff">Staff</option>
                 <option value="bod">BOD member</option>
             </select>
